--- a/package.json
+++ b/package.json
@@ -4,31 +4,42 @@
   "description": "Lint commit message",
   "main": "dist/index.js",
   "type": "module",
+  "bin": {
+    "lint-msg": "dist/index.js"
+  },
   "scripts": {
-    "dev": "esno src/index.ts",
     "build": "tsup src/index.ts --format esm",
     "lint": "eslint src/* --fix",
-    "release": "pnpm build && bumpp --tag --push --no-verify && pnpm publish",
-    "prepare": "husky install"
+    "release": "pnpm build && bumpp --tag --push --no-verify && pnpm publish"
   },
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "lint",
+    "commit-msg"
+  ],
+  "author": "Nicholas Yang <yss_2016@outlook.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yangss3/lint-msg.git"
+  },
+  "homepage": "https://github.com/yangss3/lint-msg#readme",
+  "license": "MIT",
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.21",
     "@yangss/eslint-config-ts": "^0.2.3",
-    "@yangss/init-git-repo": "^0.0.14",
     "bumpp": "^7.1.1",
     "eslint": "^8.11.0",
-    "esno": "^0.14.1",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.7",
     "tsup": "^5.12.1",
     "typescript": "^4.6.2"
   },
   "dependencies": {
     "chalk": "^5.0.1",
     "fs-extra": "^10.0.1"
-  },
-  "lint-staged": {
-    "*.(js|ts|tsx)": "eslint --fix"
   }
 }
