--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "chalk": "^5.0.1",
-    "fs-extra": "^10.0.1"
+    "fs-extra": "^10.0.1",
+    "picocolors": "^1.0.0"
   }
 }
